docs: slim README, add devices.md + features.md, update PKJS to GraalJS
- README: trim from ~177 to ~95 lines; link out to docs
- docs/devices.md: compatibility matrix, flaky-BLE root cause, BT-Classic scope pointer
- docs/features.md: feature status + roadmap checklist, framed around the headless-BLE-daemon-on-Linux niche
- CLAUDE.md: rewrite PKJS section for GraalJS (was Rhino); document real build/runtime gotchas

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>